tests/fixtures/typeck/return_type_mismatch.diag
error: function body type does not match return type
  --> return_type_mismatch.veyl:1:20
   |
  1 | fn answer() -> Int {
   |                    ^^^^^^^^^^^^
